src/test/test-models/bad/redefine-prob1.stan
functions {
  real poisson_lpdf(real n, real x) {
    return -x^2;
  }
}
parameters {
  real y;
}
model {
  y ~ normal(0, 1);
}
